Made some (untested but compilable) KDE changes.